[FIX] documentation
